Desenvolvedores (antes do merge) pronto.

--- a/desenvolvedores.htm
+++ b/desenvolvedores.htm
@@ -102,9 +102,8 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
             <a href="https://www.facebook.com/groups/139744391271439/user/100008703466803" target="_blank" class="bi bi-facebook"></a>
-            <a href="#" target="_blank" class="bi bi-discord"></a>
             <a href="https://www.instagram.com/amanda.de.m.perez/" target="_blank" class="bi bi-instagram"></a>
-            <a href="#" target="_blank" class="bi bi-envelope-fill"></a>
+            <a href="mailto:nandaperez2002@gmail.com" target="_blank" class="bi bi-envelope-fill"></a>
             <a href="https://github.com/Perez-Amanda" target="_blank" class="bi bi-github"></a>
           </div>
           <div class="col-md-4">
@@ -128,7 +127,6 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
             <a href="https://www.facebook.com/profile.php?id=100008145907144" target="_blank" class="bi bi-facebook"></a>
-            <a href="#" target="_blank" class="bi bi-discord"></a>
             <a href="https://www.instagram.com/ezequiel_braga_ebs/" target="_blank" class="bi bi-instagram"></a>
             <a href="mailto: ezequielsantos2306@gmail.com" target="_blank" class="bi bi-envelope-fill"></a>
             <a href="https://github.com/EzequielEBS" target="_blank" class="bi bi-github"></a>
@@ -154,7 +152,6 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
             <a href="https://www.facebook.com/jairon.batista.5" target="_blank" class="bi bi-facebook"></a>
-            <a href="#" target="_blank" class="bi bi-discord"></a>
             <a href="https://www.instagram.com/jairon_henrique/" target="_blank" class="bi bi-instagram"></a>
             <a href="mailto: henriquejairon@gmail.com" target="_blank" class="bi bi-envelope-fill"></a>
             <a href="https://github.com/JaironHenrique" target="_blank" class="bi bi-github"></a>
@@ -180,155 +177,16 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem at soluta recusandae. Dolore molestias, incidunt eos voluptas ex commodi harum aspernatur animi quos similique laborum veniam fugiat consequatur repellendus dolor!
             </p>
             <a href="https://www.facebook.com/sofia.laks.5/" target="_blank" class="bi bi-facebook"></a>
-            <a href="#" target="_blank" class="bi bi-discord"></a>
             <a href="https://www.instagram.com/sofialakschevitz/" target="_blank" class="bi bi-instagram"></a>
             <a href="mailto: sofia.laks15@gmail.com" target="_blank" class="bi bi-envelope-fill"></a>
             <a href="https://github.com/sofialakschevitz" target="_blank" class="bi bi-github"></a>
           </div>
           <div class="col-md-4">
-            <img class="img-fluid" src="img/sofia.jpg" alt="sol"/>
+            <img class="img-fluid" src="img/sofia.jpg" alt=""/>
           </div>
         </div>
       </div>
     </div>
-
-  
-
-
-
-
-
-
-
-<!--
-  <div class="container">
-      <h1 class="heading"><span>meet</span>Nossa Equipe</h1>
-
-      <div class="profiles">
-        <div class="profile">
-          <img src="img/amanda.jpg" class="profile-img">
-
-          <h3 class="user-name">Amanda Perez</h3>
-          <h5>CD</h5>
-          <p>lorem
-          </p>
-        </div>
-      </div>
-
-      <div class="profiles">
-        <div class="profile">
-          <img src="img/ezequiel.jpg" class="profile-img">
-
-          <h3 class="user-name">Ezequiel Braga</h3>
-          <h5>CD</h5>
-          <p>lorem
-          </p>
-        </div>
-      </div>
-
-      <div class="profiles">
-        <div class="profile">
-          <img src="img/jairon.jpg" class="profile-img">
-
-          <h3 class="user-name">Jairon Batista</h3>
-          <h5>CD</h5>
-          <p>lorem
-          </p>
-        </div>
-      </div>
-
-      <div class="profiles">
-        <div class="profile">
-          <img src="img/sofia.jpg" class="profile-img">
-
-          <h3 class="user-name">Sofia Lakschevitz</h3>
-          <h5>CD</h5>
-          <p>lorem
-          </p>
-        </div>
-      </div>
-  </div>
-
-
-
-  <h1>Desenvolvedores</h1>
-
-  <h3>askdhiuhsDPFIUHSDPIUVHS 
-    IUBVSIDFIPsbdjxfbjnipdfnibjniuciusgdfb 
-    bnvpiadfhgvipzudhgvxISJHDViHDvijxcbkxh
-    jdfhoidufghzdcvnzidfughpzidfuhgvpizduf
-    hvzixuchgpzdfgjndlkjgbaipdufgizpdufghv
-    piuchbvnzkxjcnvpSIDUghPICUgvhpIUDgh;cj</h3>
-
-
- 
-  <div class="row">
-      <div class="column">
-        <div class="card">
-          <img src="img1.jpg" alt="Jane" style="width:100%">
-          <div class="container">
-            <h2>Jane Doe</h2>
-            <p class="title">CEO &amp; Founder</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
-            <p><button class="button">Contact</button></p>
-          </div>
-        </div>
-      </div>
-    
-      <div class="column">
-        <div class="card">
-          <img src="img2.jpg" alt="Mike" style="width:100%">
-          <div class="container">
-            <h2>Mike Ross</h2>
-            <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
-            <p><button class="button">Contact</button></p>
-          </div>
-        </div>
-      </div>
-    
-      <div class="column">
-        <div class="card">
-          <img src="img3.jpg" alt="John" style="width:100%">
-          <div class="container">
-            <h2>John Doe</h2>
-            <p class="title">Designer</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
-            <p><button class="button">Contact</button></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-  <h2>Amanda</h2>
-  <h2>Ezequiel</h2>
-  <h2>Jairon</h2>
-  <h2>Sofia</h2>
--->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
