--- a/index.html
+++ b/index.html
@@ -132,6 +132,62 @@
     </div>
     </main>
 
+    <!-- Footer -->
+
+    <footer>
+      <div id="contact-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="main-title footer-title">Entre em contato conosco</h3>
+            </div>
+            <div class="col-md-4 contact-box">
+              <nav>
+                <a>
+                    <img id = "git" src="img/logo_git.png" alt = "logotipo"><p><span class="contact-title">Nos siga:</span> <a href="https://github.com/JaironHenrique/app-de-gerenciamento" id="git_starfocus" target="blank">STAR FOCUS</a></p>
+                </a>
+              </nav>
+            </div>
+            <div class="col-md-4 contact-box">
+              <nav>
+                <a>
+                    <img id = "email" src="img/logo_email.png" alt = "logotipo"><p><span class="contact-title">Envie um e-mail:</span> <e-mail>contato.star.focus@gmail.com</e-mail></p>
+                </a>
+              </nav>
+            </div>
+            <div class="col-md-4 contact-box">
+              <nav>
+                <a>
+                    <img id = "insta" src="img/logo_insta.png" alt = "logotipo"><p><span class="contact-title">Envie uma direct:</span> @star.focus</p>
+                </a>
+              </nav>
+            </div>
+            <div class="col-md-6" id="msg-box">
+              <p>Nos deixe uma mensagem:</p>
+            </div>
+            <div class="col-md-6" id="contact-form">
+              <form action="">
+                <input type="email" class="form-control" placeholder="E-mail" name="email">
+                <input type="email" class="form-control" placeholder="Assunto" name="subject">
+                <textarea class="form-control" rows="3" placeholder="Sua mensagem" name="message"></textarea>
+                <input type="submit" class="main-btn" value="Enviar">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="copy-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <p>Desenvolvido por <a href="index.html" target="_blank">S.T.A.R.F.O.C.U.S</a> &copy; 2021</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
 
 </body>
 </html>
