Ajustes com ids nos cards dos desenvolvedores.

--- a/desenvolvedores.htm
+++ b/desenvolvedores.htm
@@ -46,44 +46,44 @@
           </div>
 
           <div class="col-md-3">
-            <div class="card">
+            <div class="card" id="card-desenvolvedores">
               <a class="card-link" href="#amanda"><img src="img/amanda.jpg" class="card-img-top" alt="Imagem de Perfil 1">
-                <div class="card-body">
-                  <h5 class="card-title">Amanda Perez</h5>
-                  <p class="card-text">Ciência de Dados - FGV EMAp</p>
+                <div class="card-body" id="card-corpo">
+                  <h5 class="card-title" id="card-titulo">Amanda Perez</h5>
+                  <p class="card-text" id="card-texto">Ciência de Dados - FGV EMAp</p>
                 </div>
               </a>
             </div>
           </div>
 
           <div class="col-md-3">
-            <div class="card">
+            <div class="card" id="card-desenvolvedores">
               <a class="card-link" href="#ezequiel"><img src="img/ezequiel.jpg" class="card-img-top" alt="Imagem de Perfil 2">
-                <div class="card-body">
-                  <h5 class="card-title">Ezequiel Braga</h5>
-                  <p class="card-text">Matemática Aplicada - FGV EMAp</p>
+                <div class="card-body" id="card-corpo">
+                  <h5 class="card-title" id="card-titulo">Ezequiel Braga</h5>
+                  <p class="card-text" id="card-texto">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
           </div>
 
           <div class="col-md-3">
-            <div class="card">
+            <div class="card" id="card-desenvolvedores">
               <a class="card-link" href="#jairon"><img src="img/jairon.jpg" class="card-img-top" alt="Imagem de Perfil 3">
-                <div class="card-body">
-                  <h5 class="card-title">Jairon Henrique</h5>
-                  <p class="card-text">Matemática Aplicada - FGV EMAp</p>
+                <div class="card-body" id="card-corpo">
+                  <h5 class="card-title" id="card-titulo">Jairon Henrique</h5>
+                  <p class="card-text" id="card-texto">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
           </div>
 
           <div class="col-md-3">
-            <div class="card">
+            <div class="card" id="card-desenvolvedores">
               <a class="card-link" href="#sofia"><img src="img/sofia.jpg" class="card-img-top" alt="Imagem de Perfil 4">
-                <div class="card-body">
-                  <h5 class="card-title">Sofia Lakschevitz</h5>
-                  <p class="card-text">Matemática Aplicada - FGV EMAp</p>
+                <div class="card-body" id="card-corpo">
+                  <h5 class="card-title" id="card-titulo">Sofia Lakschevitz</h5>
+                  <p class="card-text" id="card-texto">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
