Ajustes em cores. Container-fluid da amanda e jairon em conflito.

--- a/desenvolvedores.htm
+++ b/desenvolvedores.htm
@@ -50,7 +50,7 @@
               <a class="card-link" href="#amanda"><img src="img/amanda.jpg" class="card-img-top" alt="Imagem de Perfil 1">
                 <div class="card-body" id="card-corpo">
                   <h5 class="card-title" id="card-titulo">Amanda Perez</h5>
-                  <p class="card-text" id="card-texto">Ciência de Dados - FGV EMAp</p>
+                  <p class="card-text" id="card-palavras">Ciência de Dados - FGV EMAp</p>
                 </div>
               </a>
             </div>
@@ -61,7 +61,7 @@
               <a class="card-link" href="#ezequiel"><img src="img/ezequiel.jpg" class="card-img-top" alt="Imagem de Perfil 2">
                 <div class="card-body" id="card-corpo">
                   <h5 class="card-title" id="card-titulo">Ezequiel Braga</h5>
-                  <p class="card-text" id="card-texto">Matemática Aplicada - FGV EMAp</p>
+                  <p class="card-text" id="card-palavras">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
@@ -72,7 +72,7 @@
               <a class="card-link" href="#jairon"><img src="img/jairon.jpg" class="card-img-top" alt="Imagem de Perfil 3">
                 <div class="card-body" id="card-corpo">
                   <h5 class="card-title" id="card-titulo">Jairon Henrique</h5>
-                  <p class="card-text" id="card-texto">Matemática Aplicada - FGV EMAp</p>
+                  <p class="card-text" id="card-palavras">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
@@ -83,7 +83,7 @@
               <a class="card-link" href="#sofia"><img src="img/sofia.jpg" class="card-img-top" alt="Imagem de Perfil 4">
                 <div class="card-body" id="card-corpo">
                   <h5 class="card-title" id="card-titulo">Sofia Lakschevitz</h5>
-                  <p class="card-text" id="card-texto">Matemática Aplicada - FGV EMAp</p>
+                  <p class="card-text" id="card-palavras">Matemática Aplicada - FGV EMAp</p>
                 </div>
               </a>
             </div>
