Tirando as ids colocadas no commit anterior. Agora está certo.

--- a/servicos_desempenho.html
+++ b/servicos_desempenho.html
@@ -37,7 +37,7 @@
         </div>
     </header>
     
-    <div class="container-fluid" id="cont-fluid-servicos">
+    <div class="container-fluid">
         <div class="card text-center" id="card-servicos3">
             <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
