Adicionando ícones no footer e corrigindo bugs nos botões

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
         </div>
     </header>
-  <main>   
+  <main class="espaco-footer">   
     <div class="container-fluid">
         <!-- Slider -->
         <div id="mainSlider" class="carousel slide" data-bs-ride="carousel">
@@ -140,6 +140,30 @@
             </div>
           </div>
 
+    
+
+
+        <!-- Apelo final -->
+        <div id="about-area">
+          <div class="container" id = "apelo-container">
+              <div class="row align-items-center">
+                <div class="col-12"> 
+                  <h3 id="Conheça" class="main-title">Se interessou?</h3>
+                </div>
+                <div class="col-8 text-center">
+                  <h3 class="about-title">Então não perca tempo!</h3>
+                  <p> </p>
+                  <a href="login.htm" class="main-btn">Fazer login</a>
+                </div>
+                <div class="col-4">
+                  <img class="img-fluid" src="img/foguete.jpg" alt="foguete">
+                </div>
+              </div>
+              <div class="row"> <p>  </p> </div>
+          </div>
+        </div>
+    </main>
+    
     <!-- Footer -->
 
     <footer>
@@ -150,25 +174,16 @@
               <h3 class="main-title footer-title">Entre em contato conosco</h3>
             </div>
             <div class="col-md-4 contact-box">
-              <nav>
-                <a>
-                    <img id = "git" src="img/logo_git.png" alt = "logotipo"><p><span class="contact-title">Nos siga:</span> <a href="https://github.com/JaironHenrique/app-de-gerenciamento" id="git_starfocus" target="blank">STAR FOCUS</a></p>
-                </a>
-              </nav>
+              <i class="bi bi-github"></i>
+              <p><span class="contact-title">Nos siga:</span> <a href="https://github.com/JaironHenrique/app-de-gerenciamento" id="git_starfocus" target="blank">STAR FOCUS</a></p>
             </div>
             <div class="col-md-4 contact-box">
-              <nav>
-                <a>
-                    <img id = "email" src="img/logo_email.png" alt = "logotipo"><p><span class="contact-title">Envie um e-mail:</span> <e-mail>contato.star.focus@gmail.com</e-mail></p>
-                </a>
-              </nav>
+              <i class="bi bi-envelope-fill"></i>
+              <p><span class="contact-title">Envie um e-mail:</span> <e-mail>contato.star.focus@gmail.com</e-mail></p>
             </div>
             <div class="col-md-4 contact-box">
-              <nav>
-                <a>
-                    <img id = "insta" src="img/logo_insta.png" alt = "logotipo"><p><span class="contact-title">Envie uma direct:</span> @star.focus</p>
-                </a>
-              </nav>
+              <i class="bi bi-instagram"></i>
+              <p><span class="contact-title">Envie uma direct:</span> @star.focus</p>
             </div>
             <div class="col-md-6" id="msg-box">
               <p>Nos deixe uma mensagem:</p>
@@ -195,27 +210,5 @@
         </div>
       </div>
     </footer>
-
-
-        <!-- Apelo final -->
-        <div id="about-area">
-          <div class="container" id = "apelo-container">
-              <div class="row align-items-center">
-                <div class="col-12"> 
-                  <h3 id="Conheça" class="main-title">Se interessou?</h3>
-                </div>
-                <div class="col-8 text-center">
-                  <h3 class="about-title">Então não perca tempo!</h3>
-                  <p> </p>
-                  <a href="login.htm" class="main-btn">Fazer login</a>
-                </div>
-                <div class="col-4">
-                  <img class="img-fluid" src="img/foguete.jpg" alt="foguete">
-                </div>
-              </div>
-              <div class="row"> <p>  </p> </div>
-          </div>
-        </div>
-    </main>
 </body>
 </html>
