Adicionando footer e organizando as páginas

--- a/criar_conta.htm
+++ b/criar_conta.htm
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-    
+
     <link rel="shortcut icon" href="img/STARFOCUS - logo.ico">
     <link rel="stylesheet" href="style.css">
 
@@ -53,8 +53,8 @@
                         <input type="text" placeholder="Nome de Usuário" class="form-control"/>
                     </div>    
                     <div class="input-group">
-                        <input type="text" placeholder="Senha" class="form-control"/>
-                        <input type="text" placeholder="Confirmar" class="form-control"/>
+                        <input type="password" placeholder="Senha" class="form-control"/>
+                        <input type="password" placeholder="Confirmar" class="form-control"/>
                     </div>
                     <div>
                         <a class="btn btn-success btn-block_conta" href="index.html" role="button">Finalizar</a> 
@@ -68,7 +68,7 @@
     <!-- Footer -->
 
     <footer>
-        <div id="contact-area">
+        <div id="contact-area-login">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -101,7 +101,7 @@
           </div>
         </div>
   
-        <div id="copy-area">
+        <div id="copy-area-login">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
