--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!-- Footer -->
 
     <footer>
-      <div id="contact-area">
+      <div id="contact-area-index">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
@@ -200,7 +200,7 @@
         </div>
       </div>
 
-      <div id="copy-area">
+      <div id="copy-area-index">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
