--- a/login.htm
+++ b/login.htm
@@ -65,7 +65,7 @@
     <!-- Footer -->
 
     <footer>
-        <div id="contact-area">
+        <div id="contact-area-login">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -98,7 +98,7 @@
           </div>
         </div>
   
-        <div id="copy-area">
+        <div id="copy-area-login">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
