--- a/servicos_pomodoro.html
+++ b/servicos_pomodoro.html
@@ -54,7 +54,20 @@
             </div>
             <div class="card-body">
             <!--<h5 class="card-title">Título especial</h5>-->
-            <p class="card-text">[Pensar em como vamos fazer o pomodoro.]</p>
+            <!--<p class="card-text">[Pensar em como vamos fazer o pomodoro.]</p>-->
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Concentre-se!</h1>
+                    <br>
+                    <div class="card">
+                        <div class="card-body" id="cronometro"><h1>30:00.00</h1></div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/ampulheta.png" alt="Ampulheta do Pomodoro" id="ampulheta"/>
+                </div>
+              </div>
+              <br>
             <a href="#" class="btn btn-primary">Iniciar Pomodoro</a>
             </div>
         </div>
