Revert "Revert merge"
This reverts commit 0aee215a6839bced79325bfb3bb416cf7fa94ee4.

--- a/servicos_pomodoro.html
+++ b/servicos_pomodoro.html
@@ -29,7 +29,7 @@
                 <div class="navbar-nav">
                   <a class="nav-item nav-link" id="home-menu" href="index.html"><span>Home</span></a>
                   <a class="nav-item nav-link" id="services-menu" href="#">Serviços</a>
-                  <a class="nav-item nav-link" id="team-menu" href="#">Desenvolvedores</a>
+                  <a class="nav-item nav-link" id="team-menu" href="desenvolvedores.htm">Desenvolvedores</a>
                   <a class="nav-item nav-link" id="portfolio-menu" href="login.htm">Login</a>
                 </div>
               </div>
@@ -54,7 +54,20 @@
             </div>
             <div class="card-body">
             <!--<h5 class="card-title">Título especial</h5>-->
-            <p class="card-text">[Pensar em como vamos fazer o pomodoro.]</p>
+            <!--<p class="card-text">[Pensar em como vamos fazer o pomodoro.]</p>-->
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Concentre-se!</h1>
+                    <br>
+                    <div class="card">
+                        <div class="card-body" id="cronometro"><h1>30:00.00</h1></div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/ampulheta.png" alt="Ampulheta do Pomodoro" id="ampulheta"/>
+                </div>
+              </div>
+              <br>
             <a href="#" class="btn btn-primary">Iniciar Pomodoro</a>
             </div>
         </div>
