Mais alterações no css

--- a/criar_atv.html
+++ b/criar_atv.html
@@ -29,7 +29,7 @@
                 <div class="navbar-nav">
                   <a class="nav-item nav-link" id="home-menu" href="index.html"><span>Home</span></a>
                   <a class="nav-item nav-link" id="services-menu" href="servicos_atv.html">Serviços</a>
-                  <a class="nav-item nav-link" id="team-menu" href="#">Desenvolvedores</a>
+                  <a class="nav-item nav-link" id="team-menu" href="desenvolvedores.htm">Desenvolvedores</a>
                   <a class="nav-item nav-link" id="portfolio-menu" href="login.htm">Login</a>
                 </div>
               </div>
