--- a/servicos_pomodoro.html
+++ b/servicos_pomodoro.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
     <link rel="shortcut icon" href="img/STARFOCUS - logo.ico">
     <link rel="stylesheet" href="style.css">
 
@@ -37,7 +39,7 @@
         </div>
     </header>
     
-    <div class="container-fluid">
+    <div class="container-fluid espaco-footer">
         <div class="card text-center" id="card-servicos2">
             <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
@@ -73,5 +75,51 @@
         </div>
     </div>
 
+    <!-- Footer -->
+
+    <footer>
+        <div id="contact-area-pom">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <h3 class="main-title footer-title">Entre em contato conosco</h3>
+              </div>
+              <div class="col-md-4 contact-box">
+                <i class="bi bi-github"></i>
+                <p><span class="contact-title">Nos siga:</span> <a href="https://github.com/JaironHenrique/app-de-gerenciamento" id="git_starfocus" target="blank">STAR FOCUS</a></p>
+              </div>
+              <div class="col-md-4 contact-box">
+                <i class="bi bi-envelope-fill"></i>
+                <p><span class="contact-title">Envie um e-mail:</span> <e-mail>contato.star.focus@gmail.com</e-mail></p>
+              </div>
+              <div class="col-md-4 contact-box">
+                <i class="bi bi-instagram"></i>
+                <p><span class="contact-title">Envie uma direct:</span> @star.focus</p>
+              </div>
+              <div class="col-md-6" id="msg-box">
+                <p>Nos deixe uma mensagem:</p>
+              </div>
+              <div class="col-md-6" id="contact-form">
+                <form action="">
+                  <input type="email" class="form-control" placeholder="E-mail" name="email">
+                  <input type="email" class="form-control" placeholder="Assunto" name="subject">
+                  <textarea class="form-control" rows="3" placeholder="Sua mensagem" name="message"></textarea>
+                  <input type="submit" class="main-btn" value="Enviar">
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <div id="copy-area-pom">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <p>Desenvolvido por <a href="index.html" target="_blank">S.T.A.R.F.O.C.U.S</a> &copy; 2021</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
