Corrigindo título de desenvolvedores

--- a/desenvolvedores.htm
+++ b/desenvolvedores.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/STARFOCUS - logo.ico">
 
-    <title>Desenvolvedores</title>
+    <title>Desenvolvedores | S.T.A.R.F.O.C.U.S.</title>
 </head>
 <body>
   <header>
