Adicionando cores e corrigindo o css

--- a/servicos_atv.html
+++ b/servicos_atv.html
@@ -42,13 +42,13 @@
             <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                <a class="nav-link active" href="#">Minhas atividades</a>
+                <a class="nav-link active" href="#" id="aba1-ativa">Minhas atividades</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_pomodoro.html">Pomodoro</a>
+                <a class="nav-link" href="servicos_pomodoro.html" id="aba2">Pomodoro</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_desempenho.html">Desempenho</a>
+                <a class="nav-link" href="servicos_desempenho.html" id="aba3">Desempenho</a>
                 </li>
             </ul>
             </div>
