--- a/servicos_desempenho.html
+++ b/servicos_desempenho.html
@@ -42,13 +42,13 @@
             <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_atv.html">Minhas atividades</a>
+                <a class="nav-link" href="servicos_atv.html" id="aba1">Minhas atividades</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_pomodoro.html">Pomodoro</a>
+                <a class="nav-link" href="servicos_pomodoro.html" id="aba2">Pomodoro</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="#">Desempenho</a>
+                <a class="nav-link active" href="#" id="aba3-ativa">Desempenho</a>
                 </li>
             </ul>
             </div>
