--- a/servicos_pomodoro.html
+++ b/servicos_pomodoro.html
@@ -42,13 +42,13 @@
             <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_atv.html">Minhas atividades</a>
+                <a class="nav-link" href="servicos_atv.html" id="aba1">Minhas atividades</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="#">Pomodoro</a>
+                <a class="nav-link active" href="#" id="aba2-ativa">Pomodoro</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_desempenho.html">Desempenho</a>
+                <a class="nav-link" href="servicos_desempenho.html" id="aba3">Desempenho</a>
                 </li>
             </ul>
             </div>
