adicionei uma simulação das tarefas

--- a/servicos_atv.html
+++ b/servicos_atv.html
@@ -55,10 +55,27 @@
             </ul>
             </div>
             <div class="card-body">
-            <!--<h5 class="card-title">Título especial</h5>-->
-            <p class="card-text">Puxa, parece que você ainda não adicionou nenhuma atividade para monitorar :(</p>
-            <a href="criar_atv.html" class="btn btn-primary">Nova atividade</a>
-            </div>
+              <!--<h5 class="card-title">Título especial</h5>-->
+              <p class="card-text"> <i title = "Cada estrela é um copo de água" class="bi-info-circle-fill" role = "img"></i> Beber água:
+                  <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                  <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                  <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                  <i class="bi-star-fill" role="img" ></i>
+                  <i class="bi-star-fill" role="img" ></i>
+                  <i class="bi-star-fill" role="img" ></i>
+                  <i class="bi-star-fill" role="img" ></i>
+                  <i class="bi-star-fill" role="img" ></i>
+                  <a href="" class="btn btn-primary">Adicionar estrela</a>
+                  <a href="" class="btn btn-primary">Remover estrela</a>
+              </p>
+              <p class="card-text"> <i title = "Cada estrela é um pomodoro" class="bi-info-circle-fill" role = "img"></i> Estudar Linguagens de Programação:  
+                  <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                  <i class="bi-star-fill" role="img" style="color:yellow"></i>
+                  <i class="bi-star-fill" role="img" ></i>
+                  <a href="" class="btn btn-primary">Adicionar estrela</a>
+                  <a href="" class="btn btn-primary">Remover estrela</a></p>
+              <a href="criar_atv.html" class="btn btn-primary">Nova atividade</a>
+              </div>
         </div>
     </div>
 
