--- a/criar_atv.html
+++ b/criar_atv.html
@@ -81,6 +81,9 @@
                         <input type="text" placeholder="Digite um rótulo para sua atividade" class="form-control"/>
                     </div>
                     <div class="form-group">
+                      <input type="text" placeholder="Número de estrelas" class="form-control"/>
+                  </div>
+                    <div class="form-group">
                         <textarea type="text" placeholder="Descrição (opcional)" class="form-control" rows=5></textarea>
                     </div>
                     <div>
