Corrigindo alguns detalhes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="img/banner_foco.jpg" class="d-block w-100" alt="foco">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Quer se manter focado?</h2>
-                    <p>Mehore sua concetração e alcance seu objetivo.</p>
+                    <p>Mehore sua concentração e alcance seu objetivo.</p>
                     <a href="login.htm" class="main-btn">Fazer login</a>
                 </div>
               </div>
@@ -63,7 +63,7 @@
               <div class="carousel-item">
                 <img src="img/banner_estudo_trabalho.jpg" class="d-block w-100" alt="estudo e trabalho">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>Quer otimizar seus resultado?</h2>
+                    <h2>Quer otimizar seus resultados?</h2>
                     <p>Melhore seu desempenho acadêmico ou do seu trabalho.</p>
                     <a href="login.htm" class="main-btn">Fazer login</a>
                 </div>
@@ -127,7 +127,7 @@
                     <p>Nosso objetivo é fazer você alcançar seus objetivos.</p>
                     <p>Você poderá se planejar para obter melhores resultados.</p>
                     <p>Se motive vendo o quanto você evoluiu.</p>
-                    <p>Você poderá administrar :</p>
+                    <p>Você poderá administrar:</p>
                     <ul id="about-list">
                       <li><i class="bi bi-star-fill"></i> Seus estudos;</li>
                       <li><i class="bi bi-star-fill"></i> Sua saúde;</li>
